<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MEDiCAP</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="medMon">Medical Monitor</string>
    <string name="medicationMssg2User">Time To Take Medication : </string>
    <string name="medicationCounter">00:00:00</string>
    <string name="button1">Medicine Set-Up</string>
    <string name="title_activity_next">NextActivity</string>
    <string name="medicineSetUp">Medical Interface</string>
    <string name="prescribedTimeMssg">Prescribed Time:</string>
    <string name="button2">Save</string>
    <string name="title_activity_vibrate">Vibrate</string>
    <string name="local_service_started">svc (on)</string>
    <string name="title_activity_static_viewer">Static Viewer</string>
	<string name="onceADay">Once A Day</string>
    <string name="twiceADay">Twice A Day</string>
    <string name="threeTimesADay">Three Times A Day</string>
    <string name="fourTimesADay">Four Times A Day</string>
    <string name="fiveTimesADay">Five Times A Day</string>
    <string name="sixTimesADay">Six Times A Day</string>
</resources>